--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <div class="intro-content">
                 <h1>최적화된 웹사이트</h1>
                 <p>이 웹사이트는 성능, SEO, 접근성을 고려하여 최적화되었습니다. 빠른 로딩 속도, 검색엔진 최적화, 반응형 디자인을 통해 사용자 경험을 제공합니다.</p>
-                <a href="#" target="_blank" class="github-btn">GitHub 코드 보기</a>
+                <a href="https://github.com/AreumYoon123/web-optimization" target="_blank" class="github-btn">GitHub 코드 보기</a>
             </div>
         </div>
     </section>
