--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
                 </ul>
             </nav>
             <button class="hamburger" aria-label="메뉴 열기">&#9776;</button>
+            <button class="close_btn" aria-label="메뉴 닫기">&times;</button>
         </div>
     </header>
 
@@ -105,3 +106,4 @@
 
 </body>
 </html>
+
